# Secret-Santa

./: .gitignore  Dockerfile  README.md  db.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  schema.py  utils.py
tests/: conftest.py  test_db.py  test_schema.py  test_utils.py
