[project]
name = "secret-santa"
version = "0.1.0"
description = "Telegram bot for secret santa"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = "tests/.*"

[tool.ruff]
line-length = 120
extend-exclude = [".mypy_cache/*", ".venv/*", "tests/*"]
exclude = [".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "C", "Q", "B", "S"]
